# alms

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.agents/skills/alms-dev/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml
cli/: LICENSE  PUBLISHING.md  README.md  pyproject.toml
cli/.github/workflows/: publish.yml
cli/src/alms_cli/: __init__.py  __main__.py  main.py
cli/src/alms_cli/commands/: __init__.py  info.py  init.py
cli/src/alms_cli/templates/: __init__.py  generator.py  profiles.py  template_renderer.py
cli/src/alms_cli/templates/files/: .env.example.j2  .gitignore.j2  Dockerfile.j2  README.md.j2  alembic.ini.j2  docker-compose.yml.j2  pyproject.toml.j2  pytest.ini.j2
cli/src/alms_cli/templates/files/.github/: pull_request_template.md.j2
cli/src/alms_cli/templates/files/.github/ISSUE_TEMPLATE/: feature_request.yml.j2
cli/src/alms_cli/templates/files/.github/workflows/: ci.yml.j2
cli/src/alms_cli/templates/files/alembic/: env.py.j2
cli/src/alms_cli/templates/files/rules/: project_rules.md.j2
cli/src/alms_cli/templates/files/src/agents/agent_manager/: agent.py.j2
cli/src/alms_cli/templates/files/src/agents/prompts/: sample_agent_prompt.py.j2
cli/src/alms_cli/templates/files/src/api/: main.py.j2
cli/src/alms_cli/templates/files/src/api/endpoints/v1/: dependencies.py.j2  health.py.j2  metrics.py.j2  routers.py.j2  sample_agent.py.j2  sample_di.py.j2
cli/src/alms_cli/templates/files/src/api/endpoints/v1/schemas/: base.py.j2  sample.py.j2
cli/src/alms_cli/templates/files/src/api/middlewares/: error_handler.py.j2  logging.py.j2  observability.py.j2  security.py.j2
cli/src/alms_cli/templates/files/src/api/router/: routers.py.j2
cli/src/alms_cli/templates/files/src/config/: logs_config.py.j2  settings.py.j2
cli/src/alms_cli/templates/files/src/core/: exceptions.py.j2
cli/src/alms_cli/templates/files/src/database/: connection.py.j2
cli/src/alms_cli/templates/files/src/database/repositories/: base.py.j2  sqlalchemy_repository.py.j2
cli/src/alms_cli/templates/files/src/execution/actions/: sample_action.py.j2
cli/src/alms_cli/templates/files/src/execution/usecases/: sample_usecase.py.j2
cli/src/alms_cli/templates/files/src/observability/: __init__.py.j2  metrics.py.j2  tracing.py.j2
cli/src/alms_cli/templates/files/src/providers/ai/: base.py.j2  factory.py.j2  langchain_model_loader.py.j2
cli/src/alms_cli/templates/files/src/tests/: conftest.py.j2
cli/src/alms_cli/templates/files/src/tests/e2e/: test_workflows.py.j2
cli/src/alms_cli/templates/files/src/tests/integration/: test_full_stack.py.j2
cli/src/alms_cli/templates/files/src/tests/v1/: test_agent.py.j2  test_health.py.j2  test_metrics.py.j2  test_metrics_endpoint.py.j2  test_observability_middleware.py.j2  test_sqlalchemy_repository.py.j2  test_tracing.py.j2
cli/src/alms_cli/ui/: __init__.py  components.py
cli/tests/: conftest.py  test_generator.py  test_smoke_imports.py  test_template_system.py  test_ui_components.py
docs/: 01-System-Design.md  02-Design-Patterns.md  05-Project-Structure.md  06-API-Documentation.md  07-Setup-Installation.md  09-Getting-Started-CLI.md  ROOT_RUFF_ISSUES.md  UPDATE-SUMMARY.md  release-checklist.md  release-notes-rc.md
docs/changelogs/: version-0.2.1.md  version-0.3.0.md  version-0.3.1.md  version-0.3.2.md  version-0.3.3.md  version-0.3.4.md
docs/release/: full-scale-validation-report.md  testpypi-validation-report.md
rules/: project_rules.md
src/agents/agent_manager/: agent.py
src/agents/prompts/: prompt_manager.py  sample_agent_prompt.py
src/agents/schemas/: __init__.py
src/api/: main.py
src/config/: settings.py
src/database/: connection.py
src/observability/: metrics.py  tracing.py
src/tests/: DATABASE_TESTS.md  README.md  conftest.py
(+28 files in other folders)
