[project]
name = "axtra-alms"
version = "0.3.0"
description = "ALMS AI-first backend starter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
ai = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "openai>=2.33.0",
]
workflow = [
    "langgraph>=1.1.9",
]
db = [
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
]
cache = [
    "redis>=7.4.0",
]
observability = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "prometheus-client>=0.20.0",
]
docs = [
    "scalar-fastapi>=1.6.0",
]
full = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "openai>=2.33.0",
    "langgraph>=1.1.9",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "redis>=7.4.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "prometheus-client>=0.20.0",
    "scalar-fastapi>=1.6.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]
[tool.alms]
profile = "full"
capabilities = [
    "runtime_auth",
    "tests",
    "llm",
    "langgraph",
    "database",
    "redis",
    "observability",
    "scalar_docs",
    "docker",
    "ci",
]

[tool.ruff.lint.per-file-ignores]
# Test files favor readability/structure over strict import and unused-var
# rules (setup-before-import patterns, assigned-for-clarity result vars).
"src/tests/**/*.py" = ["E402", "F401", "F841", "F811"]
